# szeyap

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  setup.sh
szeyap-api/: .dockerignore  Dockerfile  README.md  api.py  config.py  pyproject.toml  requirements.txt  run.txt
szeyap-api/data/: parser.py  tones.json
szeyap-api/resolvers/: translations.py
szeyap-api/specs/: szeyap_api.yml
szeyap-api/src/szeyapapi/: __main__.py  api.py  config.py
szeyap-api/src/szeyapapi/data/: .gitignore  Initial and Finals Chart for Penyim Converter.xlsx  README.md  dj_jyutping_table.csv  gc_penyim_table.csv  hsr_jyutping_table.csv  jw_jyutping_table.csv  jyutping_tones.json  sl_penyim_table.csv  stephen_li_dictionary.json  tones.json
szeyap-api/src/szeyapapi/data/embeddings/: GENE_CHIN_CH_EMBEDDINGS.pt  GENE_CHIN_EN_EMBEDDINGS.pt  STEPHEN_LI_CH_EMBEDDINGS.pt  STEPHEN_LI_EN_EMBEDDINGS.pt
szeyap-api/src/szeyapapi/data/scripts/: gc_dict_parser.py  (+1 more)
szeyap-api/src/szeyapapi/dictionaries/: dictionary_base.py  genechin_dictionary.py  stephenli_dictionary.py
szeyap-api/src/szeyapapi/embeddings/: .gitignore  README.md  environment.yml  szeyap_embeddings.ipynb
szeyap-api/src/szeyapapi/logging/: logger.py
szeyap-api/src/szeyapapi/processesing/: comparison.py
szeyap-api/src/szeyapapi/resolvers/: romanizations.py  translations.py
szeyap-api/src/szeyapapi/specs/: szeyap_api.yml
szeyap-api/src/szeyapapi/translation_logic/: jyutping.py  jyutping_tables.py  penyim.py  penyim_tables.py  question.py  response.py  translator.py
szeyap-api/src/szeyapapi/utils/: enums.py
szeyap-api/tests/: test_penyim.py
szeyap-api/translation_logic/: PhraseDefinition.py
(+35 files in other folders)
