[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "szeyapapi"
version = "0.1.0"
dependencies = [
    "Flask",
    "connexion",
    "connexion[uvicorn]",
    "connexion[swagger-ui]",
    "gunicorn",
    "torch",
    "sentence-transformers",
]

[project.scripts]
szeyapapi = "szeyapapi.api:main"