[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "szeyapapi"
version = "0.1.0"
dependencies = [
    "Flask",
    "connexion",
    "connexion[uvicorn]",
    "connexion[swagger-ui]",
    "gunicorn",
    "pip>=25.1.1",
    "fuzzywuzzy>=0.18.0",
    "numpy>=2.3.1",
    "wordfreq>=3.1.1",
    "jieba>=0.42.1",
]

[project.scripts]
szeyapapi = "szeyapapi.api:main"
