[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "szeyapapi"
version = "0.1.0"
dependencies = [
    "Flask",
    "connexion",
    "connexion[uvicorn]",
    "connexion[swagger-ui]",
    "gunicorn",
    "pip>=25.1.1",
    "numpy>=2.3.1",
    "wordfreq>=3.1.1",
    "jieba>=0.42.1",
    "spacy>=3.8.7",
    "fast-langdetect>=0.3.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pandas>=2.3.1",
    "openpyxl>=3.1.5",
]

[project.scripts]
szeyapapi = "szeyapapi.api:main"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pyppeteer>=2.0.0",
]
